Update re direccionamiento page CNJSA

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
-			      <a class="navbar-brand" href="http://cnjsa.coljuegos.gov.co/"><img src="img/cnjsa2.png" alt="Consejo nacional de juegos de suerte y azar cnjsa" class="img-cnjsa"></a>
+			      <a class="navbar-brand" href="http://cnjsa.coljuegos.gov.co/" target="_blanck"><img src="img/cnjsa2.png" alt="Consejo nacional de juegos de suerte y azar cnjsa" class="img-cnjsa"></a>
 			    </div>
 
 			    <!-- Collect the nav links, forms, and other content for toggling -->
