--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<div class="imagenes row">
 			
 			<!--<img src="img/coljuegos.png" alt="Coljuegos" class="col-xs-4 col-sm-4 col-md-4 col-lg-3 col-lg-offset-1 img-coljuegos">-->
-			<img src="img/minH.png" alt="Minhacienda" class="ol-xs-12 col-sm-12 col-md-12 col-lg-12 img-mh">
+			<img src="img/minH.png" alt="Minhacienda" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 img-mh">
 
 		</div>
 
